--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,103 @@
+
 * {
   box-sizing: border-box;
 }
 
 body {
-  margin: 0;
+  margin: 0%;
   padding: 0;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  line-height: 1.5;
+  font-family: Garamond, serif;
+  line-height: 2.5;
+
+}
+header {
+  background-color: rgb(44, 44, 44);
+  color: antiquewhite;
+
+}
+
+header h1{
+display: grid;
+grid-template-columns: 100%;
+text-align: center;
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+
+}
+/*Navigation CSS */
+
+.nav-grid {
+max-width: 300px;
+height: 600px;
+margin: 0 auto;
+
+display: grid;
+grid-template-columns: 1fr 1fr 1fr;
+column-gap: 10px;
+
+
+}
+.about-me {
+  display: flex;
+
+}
+
+nav a {
+color: antiquewhite;
+
+
+}
+
+.hero-banner{
+margin: 0%;
+background-image: url("/images/02-hero-bg.jpg");
+color: aliceblue;
+padding: 2%;
+
+
 }
 .container {
 display: grid;
 grid-template-columns: 25% 75%;
+background-color: rgb(255, 255, 255);
+color: rgba(46, 76, 160, 0.924);
+margin: 5%;
+
 
 }
+
+#about {
+
+
+
+}
+
+#work {
+display: grid;
+grid-template-columns: 75% 25%;
+grid-template-rows: 75% 25%;
+
+}
+
+
+
+
+
+#contact {
+
+}
+
+
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  margin: 0;
+  margin: 10px;
 }
 
 p {
-  margin: 0;
+  margin: 10px;
 }
+
