--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,15 @@
+@media screen (min-width 900px){
+  .selfie img {
+    position: relative;
+    margin-top: 8%;
+    margin-left: 80px;
+    
+  
+  }
+}
 
+
+/* Universal CSS */
 * {
   box-sizing: border-box;
 }
@@ -7,14 +18,27 @@ body {
   font-family: Garamond, serif;
 
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 10px;
+}
+
+p {
+  margin: 10px;
+}
 /* CSS */
 header {
   display: flex;
   justify-content: space-around;
   background-color: antiquewhite;
   color: rgb(76, 93, 82);  
-  margin-left: 50px;
-  margin-right: 50px;
+  margin-left: 4%; 
+  margin-right: 4%;
   z-index: 1;
   border-radius: 10px 10px 0px 0px;
 }
@@ -57,7 +81,6 @@ nav a {
 }
 
 nav a:hover { 
-  background-color: #55655c;
   border-top: 5px solid #c2cbc3;
 }
 
@@ -66,113 +89,108 @@ nav a:hover {
   display: inline-flex;
   position: relative;
   flex-direction: row-reverse;
-  padding: 1px 550px 5px;
   margin-left: 4%; 
   margin-right: 4%;
   background-color: rgb(33, 70, 40);
-  font-family: Garamond, serif;
   border-radius: 0px 0px 10px 10px;
   overflow: hidden;
+  width: 92%;
+  justify-content: space-evenly;
+  align-items: center;
 
 }
 
 .hero-banner h2 {
   color: rgb(255, 255, 255);
-  font-size: 30px;
+  font-size: 25px;
   font-family: Garamond, serif;
-  margin: auto auto auto auto;
-  font-style: italic;
+  margin-left: 10px;
+  margin-top: 20px;
+  white-space: nowrap;
   
 }
-.hero-banner img {
-  display: inline-flex;
+.selfie img {
+  display: inline-block;
   position: relative;
+  align-self: flex-start;
   float: left;
-  height: 75px;
-  width: 60px;
-  margin-left: -300px;
+  height: 110px;
+  width: 85px;
+  padding: 5px 5px 5px 5px;
+  border-radius: 30px;
   background-color: #55655c;
-  border-right: 10px solid #55655c;
+  margin-top: -8.5%;
+  margin-left: 80px;
+  
+
 }
 
 /* Content CSS */
-.container {
+main {
   display: grid;
-  grid-template-columns: 25% 75%;
+  grid-template-columns: 20% 75%;
   color: rgb(27, 70, 50);
   margin: 80px;
   margin-top: 0;
 }
 
-#about-me {
+.page-section {
   font-size: small;
   color: rgb(76, 93, 82); 
   background-color: antiquewhite;
   border-right: 8px solid rgb(33, 70, 40);
   border-radius: 10px;
-  margin: 30px 0% 30px;
   margin-left: -30px;
 }
+#about-me {
+  margin: 30px 0% 30px;
+}
 
+#about-me p {
+  height: 50px;
+  width: 10px ;
+}
+.hobbies {
+  margin: 4% 0% 0% 0%;
+}
 #about-me:hover {
   border-right: 8px solid rgb(33, 70, 40, 0.5);
 }
 
 #work {
-  font-size: small;
-  color: rgb(76, 93, 82);  
-  background-color: antiquewhite;
-  padding: 5px;
-  border-right: 8px solid rgb(33, 70, 40);
+  padding-bottom: 150px;
   margin: 1% 0% 30px;
-  margin-left: -30px;
-  border-radius: 10px;
 }
 
 #work:hover {
   border-right: 8px solid rgb(33, 70, 40, 0.5);
 }
 
-
 #work h2 {
   color: rgb(76, 93, 82); ;
 }
 
-
 #contact {
-  font-size: small;
-  color: rgb(76, 93, 82); 
-  background-color: antiquewhite;
   padding: 5px;
-  border-right: 8px solid rgb(33, 70, 40);
-  border-radius: 10px;
   margin: 1% 0% 30px;
-  margin-left: -30px;
+}
+
+#contact aside{
+  margin: 2%;
 }
 
 #contact:hover {
   border-right: 8px solid rgb(33, 70, 40, 0.5);
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 10px;
-}
-
-p {
-  margin: 10px;
-}
-
-
 .wrapper {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   align-items: end;
-  grid-auto-rows: 200px;
+  grid-auto-rows: 50px;
+  grid-template-areas: 
+  "f h c"
+  ;
 }
 
 .wrapper p {
@@ -180,8 +198,14 @@ p {
   height: auto;
 }
 
-#Figma
-{
+.wrapper p img {
+  border-bottom: 20px solid rgb(211, 176, 87, 0.5);
+}
+.wrapper p img:hover {
+  border-bottom: 28px solid rgb(211, 176, 87, 0.3);
+}
+#Figma {
+  grid-area: "f";
   font-size: 30px;
   font-weight: 600;
   background-image: url(/starter/Portfolio/images/figma.png);
@@ -189,13 +213,22 @@ p {
   background-repeat: repeat;
   color: transparent;
   -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   background-clip: text;
   background-position: 50%;
   align-self: stretch;
+  margin: 0 auto;
 }
 
-#HTML
-{
+#Figma img {
+  display: block;
+  position: relative;
+  max-width: 200px;
+  height: auto;
+}
+
+#HTML {
+  grid-area: "h";
   font-size: 30px;
   font-weight: 600;
   background-image: url(/starter/Portfolio/images/screenshot-html.png);
@@ -203,12 +236,21 @@ p {
   background-repeat: repeat;
   color: transparent;
   -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   background-clip: text;
   align-self: stretch;
+  margin: 0 auto;
 }
 
-#CSS
-{
+#HTML img {
+  display: block;
+  position: relative;
+  max-width: 200px;
+  height: auto;
+}
+
+#CSS {
+  grid-area: "c";
   font-size: 30px;
   font-weight: 600;
   background-image: url(/starter/Portfolio/images/screenshot-css.png);
@@ -216,24 +258,43 @@ p {
   background-repeat: repeat;
   color: transparent;
   -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   background-clip: text;
   align-self: stretch;
+  margin: 0 auto;
 }
 
-#Excalidraw
-{
-  font-size: 30px;
-  font-weight: 600;
-  background-image: url(/starter/Portfolio/images/excalidraw.png);
-  background-size: 250px;
-  background-repeat: repeat;
-  color: transparent;
-  -webkit-background-clip: text;
-  background-clip: text;
-  align-self: stretch;
+#CSS img {
+  display: block;
+  position: relative;
+  max-width: 200px;
+  height: auto;
 }
 
 footer {
-  margin: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: rgb(27, 70, 50);
+}
+
+footer p {
+  font-size: large;
+  text-decoration: underline;
+}
+
+footer a {
+  text-decoration: none;
+  color: #a0a7a3;
+}
+.button {
+  background-color: #59855b;
+  border-radius: 10px;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  font-size: 20px
+}
+.button:hover {
+  background-color: #354f36;
 }
